Fixed AudioPlayer align

--- a/styles/AudioPlayer.module.css
+++ b/styles/AudioPlayer.module.css
@@ -1,6 +1,7 @@
 .audiofigure {
   text-align: center;
-  padding: 1em;
+  padding: 1em 0;
+  margin: 0;
 }
 .figcaption {
   padding: 1em 0;
